name:                ukf
version:             0.0.0.0
homepage:            https://github.com/steven741/CarND-Extended-Kalman-Filter-Project
license:             BSD2
license-file:        License
author:              Steven A. Watson
maintainer:          16228203+steven741@users.noreply.github.com
copyright:           2017 Steven A. Watson
category:            Robotics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  Readme.md

executable ukf
  hs-source-dirs:      src, lib
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -O2 -rtsopts=none
  other-modules:       App, UKF
  build-depends:
    base,
    vector,
    bytestring,
    aeson,
    websockets,
    hmatrix
